--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,6 +95,7 @@
 @import 'sections/list/resumePreview';
 @import 'sections/list/resumeSelect';
 @import 'sections/list/resumeLikes';
+@import 'sections/list/resumeSection';
 @import 'sections/list/mobile/resumeList';
 @import 'sections/list/mobile/resumeListItem';
 @import 'sections/list/mobile/resumeStat';
