--- a/assets/templates/root-mobile.html
+++ b/assets/templates/root-mobile.html
@@ -2,7 +2,7 @@
 
     <resume-list-mobile></resume-list-mobile>
     <resume-edit></resume-edit>
-    <resume-section></resume-section>
+    <resume-section-mobile></resume-section-mobile>
     <resume-select></resume-select>
     <resume-sendmail></resume-sendmail>
     <section-notify></section-notify>
@@ -78,7 +78,7 @@
                 edit: $root.tags["resume-edit"],
                 stat: $root.tags["resume-stat-mobile"],
                 select: $root.tags["resume-select"],
-                section: $root.tags["resume-section"],
+                section: $root.tags["resume-section-mobile"],
                 sendmail: $root.tags["resume-sendmail"]
             },
             offers: {
