--- a/assets/templates/root.html
+++ b/assets/templates/root.html
@@ -2,6 +2,7 @@
 
     <resume-list></resume-list>
     <resume-edit></resume-edit>
+    <resume-section></resume-section>
     <resume-select></resume-select>
     <resume-sendmail></resume-sendmail>
     <section-notify></section-notify>
