--- a/assets/templates/sections/list/resumeItem.html
+++ b/assets/templates/sections/list/resumeItem.html
@@ -8,7 +8,7 @@
             <div onClick={ show.dropMenu } onUpdate="none" class="resume__item__control__btn resume__item__control__menu"></div>
         </div>
         <div class="resume__item__control__right">
-            <div class="resume__item__noview" data-active={ opts.item.public }></div>
+            <div onClick={ onPublic } onUpdate="none" class="resume__item__noview" data-active={ opts.item.public }></div>
             <div if={ opts.item.plan == "premium" } onClick={ show.inbox } onUpdate="none" class="resume__item__inbox" data-active={ true : $store.inbox.getCounterByResumeId(item._id) }>
                 <div class="resume__item__inbox__badge">{ $store.inbox.getCounterByResumeId(item._id) }</div>
             </div>
@@ -19,9 +19,10 @@
             </div>
             <div class="resume__item__lang">{ opts.item.lang }</div>
         </div>
-        <div onClick={ onEdit } onUpdate="none" class="row resume__item__header__text">
+        <div onClick={ parent.open.resume } onUpdate="none" class="row resume__item__header__text">
             <div class="col-xs-5 col-sm-6">
-                <div class="resume__item__photo { opacity-60 : !opts.item.public }" style="background-image:url('{ opts.item.photo }')"></div>
+                <div if={ opts.item.photo } class="resume__item__photo { opacity-60 : !opts.item.public }" style="background-image:url('{ opts.item.photo }')"></div>
+                <div if={ !opts.item.photo } class="resume__item__photo__blank { opacity-60 : !opts.item.public }"></div>
             </div>
             <div class="col-xs-19 col-sm-18">
                 <div class="resume__item__title">{ opts.item.post ? opts.item.post : 'Продолжить редактирование' }</div>
@@ -35,8 +36,8 @@
     <div class="resume__item__stat">
         <div class="resume__item__stat__wrapper row">
             <div class="resume__item__stat__cell col-xs-15 col-sm-16">
-                <btn-stat onClick={ parent.open.stat } onUpdate="none"></btn-stat>
-                <svg-stat></svg-stat>
+                <btn-stat onClick={ parent.open.stat } onUpdate="none" color={ opts.item.config.color }></btn-stat>
+                <svg-stat color={ opts.item.config.color }></svg-stat>
             </div>
             <div class="resume__item__stat__cell bg-yellow c-blackLight col-xs-9 col-sm-8 resume__item__stat__percentage">
                 { opts.item.percent }%
@@ -48,12 +49,14 @@
 
     var $ = this;
 
-    $.onEdit = function(){
-        $store.data.onEdit($.opts.item._id);
-    };
-
     $.onRemove = function(){
         $store.data.onRemove($.opts.item._id);
+    };
+
+    $.onPublic = function(){
+        $store.data.onPublic($.opts.item._id, !$.opts.item.public, function(){
+            $.update();
+        })
     };
 
     $.show = {
