--- a/assets/templates/sections/list/resumeSelect.html
+++ b/assets/templates/sections/list/resumeSelect.html
@@ -99,7 +99,7 @@
                     <div class="row slider__wrapper">
                         <div each={ item, i in items.free } no-reorder class="slider__item col-md-12 col-lg-8">
                             <div class="plan__basic__item plr-l">
-                                <img class="plan__basic__item__image" src="http://resumekraft.ru/makets/images/{ item }.png">
+                                <img class="plan__basic__item__image" src="/assets/images/makets/{ item }.png">
                                 <div class="plan__basic__item__button">
                                     <button onClick={ select.template.free } class="btn { app.device.isPhone ? 'btn-xl2 btn-primary btn-shadow' : 'btn-l2 btn-default-hover-success' } mb-xs">Выбрать этот</button>
                                 </div>
