--- a/assets/css/sections/list/_resumeItem.scss
+++ b/assets/css/sections/list/_resumeItem.scss
@@ -78,6 +78,7 @@
             @extend .content-empty;
             @extend .bg-blueLight;
             @extend .opacity-95;
+            @extend .transition-default;
             border-radius:10px 10px 0 0;
         }
         @each $color in ($blue, $blueLight, $green, $emerald, $orange, $red, $violet, $violetLight, $brown, $pink){
@@ -135,16 +136,24 @@
     &__noview {
         @extend .display-block;
         @extend .mlr-xss;
-        @include ui-icon("unvisible_white", 23px, 23px);
+        @extend .opacity-85;
+        @extend .transition-default;
+        @extend .cursor-pointer;
+        @include ui-icon("unvisible_white", 26px, 26px);
 
         &[data-active="true"]{
-            @include ui-icon("visible_white", 26px, 26px);
+            @include ui-icon("visible_white", 29px, 29px);
+            transform:translate3d(1px, 2px, 0);
+        }
+        &:hover {
+            @extend .opacity-100;
         }
     }
     &__inbox {
         @extend .pos-rel;
         @extend .mlr-xxs;
         @extend .opacity-100;
+        @extend .cursor-pointer;
 
         &:after {
             @include accelerate();
@@ -278,7 +287,14 @@
         @extend .w60;
         @extend .h60;
         @extend .bg-cover;
+        @extend .transition-default;
         @extend .borderRadius-circle;
+
+        &__blank {
+            @extend .transition-default;
+            @include ui-icon("user_white", 56px, 56px);
+            transform:translateX(2px);
+        }
     }
     &__noview {
         @extend .fontSize-16;
@@ -324,6 +340,31 @@
             @extend .bg-white;
             @extend .borderRadius-xxl;
             @extend .zIndex-1;
+
+            .btn-svg-color {
+                @extend .transition-default;
+            }
+            @each $color in ($blue, $blueLight, $green, $emerald, $orange, $red, $violet, $violetLight, $brown, $pink){
+                &[data-color="#{$color}"]{
+                    .btn {
+                        color:darken($color,3%);
+                        background-color:$white;
+                        box-shadow:0 0 0 1px darken($color,3%);
+
+                        &-svg-color {
+                            fill:darken($color,3%);
+                        }
+                        &:hover {
+                            color:$white;
+                            background-color:$color;
+
+                            .btn-svg-color{
+                                fill:$white;
+                            }
+                        }
+                    }
+                }
+            }
         }
         &__graph {
             @extend .pos-abs;
