--- a/assets/css/ui/_icons.scss
+++ b/assets/css/ui/_icons.scss
@@ -1,5 +1,5 @@
 @each $icon in (
-    loading, loading_white, loading_mini, loading_mini_white, close, close_white, close_strong, close_strong_white, minus, minus_white, plus, plus_white, plus_thin, plus_thin_white, plus_thin_black, pencil, pencil_white, menu, menu_white, menu2_white, menu_lime, remove_fill_white, upload, upload_white, video_white, images_white, link_white, more_h, more_h_white, more_v, more_v_white, back, back_gray, back_white, back_lime, help, close_fill, close_fill_gray, close_fill_white, arrow_curved_white, info_white, check, check_black, check_white, check_gray, check_muted, check_circle_lime, edit, edit_white, share, share_white, hand_cursor_white, repeat, resume_white, feedback_white, addUser, addUser_white, time_muted, bankcard, bankcard_white, wallet, wallet_white, device_phones, device_phones_white, like_fill_white, like_fill_pink, crown, crown_white, coderwall_fill_white, visible, unvisible_gray, visible_white, unvisible_white
+    loading, loading_white, loading_mini, loading_mini_white, close, close_white, close_strong, close_strong_white, minus, minus_white, plus, plus_white, plus_thin, plus_thin_white, plus_thin_black, pencil, pencil_white, menu, menu_white, menu2_white, menu_lime, remove_fill_white, upload, upload_white, video_white, images_white, link_white, more_h, more_h_white, more_v, more_v_white, back, back_gray, back_white, back_lime, help, close_fill, close_fill_gray, close_fill_white, arrow_curved_white, info_white, check, check_black, check_white, check_gray, check_muted, check_circle_lime, edit, edit_white, share, share_white, hand_cursor_white, repeat, resume_white, feedback_white, addUser, addUser_white, time_muted, bankcard, bankcard_white, wallet, wallet_white, device_phones, device_phones_white, like_fill_white, like_fill_pink, crown, crown_white, coderwall_fill_white, visible, unvisible_gray, visible_white, unvisible_white, user_white, chart
 ){
     .ui-icon-#{$icon} {
         background:url('/assets/images/ui/ui-#{$icon}.svg') no-repeat 0 0 / cover;
@@ -266,6 +266,9 @@
         &.icon-xs {
             width:40px;
             height:40px;
+            margin-top:-4px;
+            margin-bottom:-4px;
+            transform:translateY(5px);
         }
         &.icon-s {
             width:52px;
@@ -380,32 +383,25 @@
     }
     &-colors {
         &.icon-xs {
-            width:26px;
-            height:26px;
+            width:32px;
+            height:32px;
+            transform:translate3d(1px, 1px, 0);
         }
         &.icon-s {
-            width:34px;
-            height:34px;
-            transform:translateY(4px);
+            width:48px;
+            height:48px;
         }
         &.icon-m {
-            width:46px;
-            height:46px;
-            margin-top:-3px;
-            margin-bottom:-3px;
+            width:64px;
+            height:64px;
         }
         &.icon-l {
-            width:70px;
-            height:70px;
-            margin-top:-5px;
-            margin-bottom:-5px;
+            width:80px;
+            height:80px;
         }
         &.icon-xl {
-            width:114px;
-            height:114px;
-            margin-top:-17px;
-            margin-bottom:-17px;
-            transform:translateY(12px);
+            width:96px;
+            height:96px;
         }
     }
     &-design {
@@ -551,6 +547,7 @@
         &.icon-xs {
             width:24px;
             height:24px;
+            transform:translateY(1px);
         }
         &.icon-s {
             width:31px;
