--- a/assets/templates/sections/list/mobile/resumeItem.html
+++ b/assets/templates/sections/list/mobile/resumeItem.html
@@ -2,7 +2,7 @@
 
     <div if={ opts.item.plan == "free" } class="resume__list-m__item__label" data-label="free"></div>
     <div onClick={ open.resume } onUpdate="none" class="col-xs-5 flex-centered resume__list-m__item__cell">
-        <div class="resume__list-m__item__cover" data-color={ opts.item.plan == "premium" ? opts.item.config.color : null }>{ get.coverPost(opts.item.post || 'R') }</div>
+        <div class="resume__list-m__item__cover" data-color={ opts.item.plan == "premium" ? opts.item.config.color : null }>{ opts.item.post ? opts.item.post[0] : 'R' }</div>
         <div if={ opts.item.plan == "premium" } class="resume__list-m__item__label" data-label="premium"></div>
     </div>
     <div onClick={ open.resume } onUpdate="none" class="col-xs-12 flex-row-left-center resume__list-m__item__cell">
