--- a/assets/templates/sections/list/mobile/resumeSection.html
+++ b/assets/templates/sections/list/mobile/resumeSection.html
@@ -1,4 +1,4 @@
-<resume-section class="screenMobile section section-hidden zIndex-1" data-inner="hidden" data-loading="false" data-screen="cover" data-pos="right" data-open="false">
+<resume-section-mobile class="screenMobile section section-hidden zIndex-1" data-inner="hidden" data-loading="false" data-screen="cover" data-pos="right" data-open="false">
 
     <div class="section__loading"></div>
 
@@ -144,13 +144,9 @@
 
     $.commit = {
         public: function(value){
-            app.request("setResumePublic", {
-                _id: $.item._id,
-                public: value
+            $store.data.onPublic($.item._id, value, function(){
+                $Sections.resume.list.update()
             })
-            .then(function(){
-                $Sections.resume.list.update();
-            });
         }
     };
 
@@ -164,4 +160,4 @@
 
 </script>
 
-</resume-section>
+</resume-section-mobile>
